server/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: hippodigital-dev-taskapi-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
    spec:
      containers:
        - name: task-api-container
          image: docker.io/araabdulkalam/task-api:0.1
          ports:
            - containerPort: 8081
