server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: hippodigital-dev-taskapi-1
spec:
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
